application/brennoflavio/immich-kiosk-joao/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-kiosk
  namespace: immich-kiosk-joao
spec:
  selector:
    app: immich-kiosk
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: immich-kiosk
  type: ClusterIP
